--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -1,7 +1,47 @@
+@import url("https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
   @apply transition-colors duration-200;
+}
+
+* {
+  font-family: "Laila", serif;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 5rem;
+}
+
+.testing {
+  width: 50vw;
+  height: 50vh;
+  position: relative;
+}
+
+.modal-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(189, 189, 189, 0.542);
+}
+
+.modal-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 30rem;
+  height: 50rem;
+  padding: 2rem 3rem;
+  border-radius: 0.5rem;
+  background-color: white;
 }
