--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -12,7 +12,8 @@
 }
 
 .modal-container {
-  @apply overflow-y-auto absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] min-w-[28rem] max-h-[40rem] h-auto p-[2rem]  bg-white dark:bg-slate-800 dark:text-white rounded-lg;
+  @apply absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] min-w-[26rem] max-h-[40rem] h-auto p-[2rem] bg-white dark:bg-slate-800 dark:text-white rounded-lg
+  overflow-y-auto;
 }
 
 .feed-events-bucket {
