--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -20,6 +20,45 @@
   @apply max-w-[1272px] relative pt-[24px] pb-[40px];
 }
 
+/* .sub-menu-wrap {
+  @apply absolute top-[100%] right-[10%] w-[320px] max-h-[0px] overflow-hidden transition max-h 0.5s;
+}
+
+.sub-menu-wrap.open-menu {
+  @apply max-h-[400px];
+} */
+
+.sub-menu {
+  @apply bg-white dark:bg-slate-700 p-[20px] m-[10px] border-2 border-gray-400;
+}
+
+.user-info {
+  @apply flex items-center;
+}
+
+.sub-menu-link {
+  @apply flex items-center mt-[12px] mb-0;
+}
+
+.sub-menu-link-icon {
+  @apply w-[40px] bg-[#e5e5e5] dark:bg-black rounded-xl p-[4px] h-[30px] mr-[10px];
+}
+
+.sub-menu-link p {
+  @apply w-[100%] dark:text-slate-400;
+}
+
+.sub-menu-link span {
+  @apply font-normal transform duration-300;
+}
+
+.sub-menu-link:hover span {
+  @apply translate-x-[5px];
+}
+.sub-menu-link:hover p {
+  @apply font-bold;
+}
+
 * {
   font-family: "Laila", serif;
   font-weight: 500;
@@ -32,40 +71,16 @@
   margin: 5rem;
 }
 
-.testing {
-  width: 50vw;
-  height: 50vh;
-  position: relative;
+.sub-menu-wrap {
+  position: absolute;
+  top: 80%;
+  right: 0;
+  width: 280px;
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.5s;
 }
 
-/* .modal-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(189, 189, 189, 0.542);
-} */
-
-/* .modal-container {
-  overflow-y: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 30rem;
-  height: 40rem;
-  padding: 3rem 2rem;
-  border-radius: 0.5rem;
-  background-color: white;
-} */
-
-/* .loginbutton {
-  border-radius: 8px;
-  cursor: pointer;
-  color: #fff;
-  fill: #fff;
-  background-color: #e32359;
-  border-color: #e32359;
-  padding: 8px 12px;
-} */
+.sub-menu-wrap.open-menu {
+  max-height: 400px;
+}
